// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table districts{
  district_key varchar [not null, pk, unique]
  district_code varchar
  district_name varchar
}

Table teams {
  team_key varchar  [not null, pk , unique]
  team_number integer
  name_full varchar
  name_short varchar
  district_code varchar
  rookie_year int
  city varchar
  state_prov varchar
  country varchar
  postal_code varchar
}


Table events {
  event_key varchar [not null, pk , unique]
  year integer [not null]
  event varchar
  event_type varchar
  event_code varchar 
  date date
  location varchar
  webcast varchar
  week integer
  district_key varchar [ref: > districts.district_key]
}



Table match_teams {
  match_key varchar [not null]
  team_key varchar [not null, ref: > teams.team_key ]
  alliance varchar [not null]
  
  indexes {
    (match_key, team_key) [pk, unique] // composite PK
  }
}

Table match_data_2026 {
  match_key varchar [ not null]
  alliance varchar  [not null]
  event_key varchar [ref: > events.event_key]
  total_score  integer
  teleop_count integer
  auto_points integer
  transition_points integer
  uncounted_points integer
  teleop_points integer
  shift1_points integer
  shift2_points integer
  shift3_points integer
  shift4_points integer
  endgame_points integer
  total_auto_points integer
  auto_tower_points integer
  end_game_tower_points integer
  total_tower_points integer
  minor_foul_count integer
  major_foul_count integer
  foul_points integer
  adjust_points integer
  ranking_points integer
  video_key varchar
  video_type varchar

  indexes {
    (match_key, alliance) [pk, unique] //composite pk
  }
}

Ref: match_data_2026.(match_key, alliance) < match_teams.(match_key, alliance)







